# jack1

./: .cvsignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  BUILDING-FOR-LINUX-2.4-KERNEL  COPYING  Makefile.am  QUICK-INSTALL  README  README.developers  README.md  TODO  acinclude.m4  alsa_driver.c  autogen.sh  cache_killer.c  capture_client.c  client.c  configure.ac  configure.in  conftest  driver.c  engine.c  fltk_client.cc  hammerfall.c  impulse_grabber.c  jack-glib2.pc.in  jack.dox  jack.pc.in  jack.spec.in  jackd.c  memops.c  monitor_client.c  pool.c  port.h  simple_client.c
config/: .cvsignore  Makefile.am  acinclude.m4  configure.host
config/cpu/: Makefile.am
config/cpu/alpha/: atomicity.h  cycles.h
config/cpu/cris/: atomicity.h
config/cpu/generic/: Makefile.am  atomicity.h  cycles.h
config/cpu/i386/: Makefile.am  atomicity.h  cycles.h
config/cpu/i486/: Makefile.am  atomicity.h  cycles.h
config/cpu/ia64/: Makefile.am  atomicity.h  cycles.h  ia64intrin.h
config/cpu/m68k/: atomicity.h
config/cpu/mips/: atomicity.h
config/cpu/powerpc/: atomicity.h  cycles.h
config/cpu/s390/: atomicity.h
config/os/: Makefile.am
config/os/generic/: Makefile.am  ipc.h  os_defines.h  poll.h  sanitycheck.c  time.c  time.h
config/os/gnu-linux/: Makefile.am  sanitycheck.c  systemtest.c  time.c  time.h
config/sysdeps/: Makefile.am  atomicity.h  cycles.h  getopt.h  ipc.h  mach_port.h  pThreadUtilities.h  poll.h  portaudio.h  sanitycheck.c  systemtest.c  time.c  time.h
doc/: .cvsignore  Makefile  Makefile.am  fsm.eps  header.html  index.m4  issues.m4  mainpage.dox  porting.dox  reference.doxygen.in  requirements.m4  trailer.html  transport.dox
drivers/: Makefile.am
drivers/a2j/: Makefile  Makefile.am  Makefile.in  a2j.h  input_client.c  port.c  port.h  port_hash.h  port_thread.c
drivers/alsa/: .cvsignore  Makefile.am  alsa_driver.c  alsa_driver.h  alsa_midi.h  alsa_rawmidi.c  alsa_seqmidi.c  generic.h  generic_hw.c  hammerfall.c  hammerfall.h  hdsp.c  hdsp.h  ice1712.c  ice1712.h  memops.c  memops.h  usx2y.c  usx2y.h
drivers/alsa-midi/: Makefile.am  alsa_midi.h  alsa_rawmidi.c  alsa_seqmidi.c  midi_pack.h  midi_unpack.h
drivers/alsa_midi/: Makefile.am  a2j.h  alsa_midi.c  alsa_midi_driver.c  list.c  list.h  midi_pack.h  port.c  port.h  port_hash.c  port_hash.h  port_thread.c  port_thread.h
drivers/am/: alsa_midi.h  alsa_midi_driver.c  alsa_rawmidi.c  alsa_seqmidi.c  midi_unpack.h
drivers/coreaudio/: AudioRender.cpp  AudioRender.h  AudioRenderBridge.cpp  AudioRenderBridge.h  Makefile.am  coreaudio_driver.c  coreaudio_driver.h
drivers/dummy/: Makefile.am  dummy_driver.c  dummy_driver.h
drivers/firewire/: Makefile.am  ffado_driver.c  ffado_driver.h
drivers/freebob/: .cvsignore  Makefile.am  freebob_driver.c  freebob_driver.h
drivers/iec61883/: Makefile.am  iec61883_client.c  iec61883_client.h  iec61883_common.c  iec61883_common.h  iec61883_driver.c  iec61883_driver.h  iec61883_ip_client.c  iec61883_ip_client.h
drivers/netjack/: Makefile.am  README  alsa_client.c  alsa_in.c  alsa_out.c  net_driver.c  net_driver.h  net_source.c  netjack.c  netjack.h  netjack_packet.c  netjack_packet.h  netjack_packet_noReOrder.c
drivers/oss/: Makefile.am  oss_driver.c  oss_driver.h
drivers/portaudio/: Makefile.am  portaudio_driver.c  portaudio_driver.h
drivers/sndio/: sndio_driver.c
drivers/solaris/: Makefile.am  solaris_driver.c
drivers/sun/: Makefile.am  sun_driver.c  sun_driver.h
example-clients/: .cvsignore  Makefile.am  bufsize.c  cache_killer.c  capture_client.c  connect.c  evmon.c  fltk_client.cc  freewheel.c  impulse_grabber.c  inprocess.c  intime.c  ipload.c  ipunload.c  latent_client.c  lsp.c  metro.c  midiseq.c  midisine.c  monitor_client.c  ringbuffer.c  ringbuffer.h  server_control.c  showtime.c  simple_client.c  simple_session_client.c  transport.c  transport_client.c  tw.c
include/: Makefile.am  atomicity.h  bitset.h  driver.h  driver_interface.h  driver_parse.h  engine.h  hardware.h  internal.h  intsimd.h  memops.h  messagebuffer.h  pool.h  port.h  sanitycheck.h  shm.h  start.h  systemtest.h  unlock.h  varargs.h  version.h
jack/: Makefile.am  alsa_driver.h  atomicity.h  bitset.h  control.h  cycles.h  driver.h  driver_interface.h  driver_parse.h  engine.h  error.h  generic.h  hammerfall.h  hardware.h  hdsp.h  intclient.h  internal.h  intsimd.h  jack.h  jslist.h  memops.h  messagebuffer.h  midiport.h  pool.h  port.h  ringbuffer.h  sanitycheck.h  session.h  shm.h  start.h  statistics.h  systemtest.h  thread.h  time.h  timestamps.h  transport.h  types.h  unlock.h  varargs.h  version.h.in  (+1 more)
jackd/: .cvsignore  ChangeLog  Makefile.am  clientengine.c  clientengine.h  controlapi.c  engine.c  jackd.1.in  jackd.c  jackstart.1  jackstart.c  md5.c  md5.h  md5_loc.h  transengine.c  transengine.h
libjack/: .cvsignore  ChangeLog  Makefile.am  client.c  driver.c  intclient.c  local.h  messagebuffer.c  metadata.c  midiport.c  pool.c  port.c  ringbuffer.c  sanitycheck.c  shm.c  simd.c  systemtest.c  thread.c  time.c  timestamps.c  transclient.c  unlock.c  uuid.c
man/: Makefile.am  alsa_in.0  alsa_in.1  alsa_out.0  jack_bufsize.0  jack_bufsize.1  jack_connect.0  jack_connect.1  jack_disconnect.0  jack_disconnect.1  jack_freewheel.0  jack_freewheel.1  jack_impulse_grabber.0  jack_impulse_grabber.1  jack_load.0  jack_load.1  jack_load_test.0  jack_lsp.0  jack_lsp.1  jack_metro.0  jack_metro.1  jack_monitor_client.0  jack_monitor_client.1  jack_property.0  jack_showtime.0  jack_showtime.1  jack_simple_client.0  jack_simple_client.1  jack_transport.0  jack_transport.1  jack_unload.0  jack_unload.1  jackrec.0  jackrec.1
tools/: .gitignore  Makefile.am  alias.c  alsa_in.c  alsa_out.c  bufsize.c  capture_client.c  connect.c  evmon.c  freewheel.c  iodelay.c  ipload.c  ipunload.c  jdelay.c  load_test.c  lsp.c  midi_dump.c  net_source.c  netsource.c  property.c  samplerate.c  session_notify.c  time_smoother.c  time_smoother.h  transport.c  wait.c
tools/alsa_midi/: Makefile.am  list.c  port.c  port.h  port_hash.c  port_thread.c  port_thread.h
(+49 files in other folders)
